animation added to post component and to home page

--- a/src/Components/Post.css
+++ b/src/Components/Post.css
@@ -1,12 +1,16 @@
 .post-card {
-  max-width: 345px;
-  min-height: 390px;
+  width: 320px;
+  height: 360px;
   border: 1px solid #ccc;
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   margin: 16px 0;
-
   overflow: hidden;
+  transition: transform 0.3s ease;
+}
+
+.post-card:hover {
+  transform: scale(0.95);
 }
 
 .post-image {
@@ -29,9 +33,15 @@
 .post-title {
   font-size: 18px;
   margin-bottom: 8px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .post-description {
   font-size: 16px;
   color: #333;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
